# VynFi-rust

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: saft_export.rs  sap_export.rs
src/: archive.rs  blocking.rs  client.rs  error.rs  lib.rs  types.rs
src/resources/: adversarial.rs  ai.rs  api_keys.rs  billing.rs  catalog.rs  configs.rs  credits.rs  fingerprint.rs  jobs.rs  mod.rs  notifications.rs  optimizer.rs  quality.rs  scenarios.rs  sessions.rs  template_packs.rs  usage.rs  webhooks.rs
tests/: integration.rs  test_client.rs
