[package]
name = "vynfi"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
authors = ["VynFi <hello@vynfi.com>"]
description = "Rust SDK for the VynFi synthetic financial data API"
repository = "https://github.com/VynFi/VynFi-rust"
homepage = "https://vynfi.com"
documentation = "https://docs.rs/vynfi"
keywords = ["vynfi", "synthetic-data", "finance", "api"]
categories = ["api-bindings", "finance"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest-eventsource = "0.6"
futures-core = "0.3"
bytes = "1"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls-tls"]
blocking = []
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
